ajout menu patient

--- a/src/app/patient/mainpatient/mainpatient.component.html
+++ b/src/app/patient/mainpatient/mainpatient.component.html
@@ -1,1 +1,6 @@
-<p>mainpatient works!</p>
+<h3 align="center">Dashboard Patient</h3>
+<button class="btn btn-primary"  style="margin-right:5px;">List Patient</button>
+<button class="btn btn-success"  style="margin-right:5px;" >Ajout Patient</button>
+<button class="btn btn-success"  style="margin-right:5px;" >Update Patient</button>
+<hr/>
+<router-outlet></router-outlet>
