Liste des Rdv html apres correction

--- a/src/app/rdv/list-rdv/list-rdv.component.html
+++ b/src/app/rdv/list-rdv/list-rdv.component.html
@@ -1,5 +1,5 @@
-<p>list-rdv works!</p>
-<h2> Liste des RDV du service .....</h2>
+
+<h2 align="center"> Liste des RDV du service .....</h2>
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -13,25 +13,22 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>d1</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>fat</td>
+      <td>1001</td>
+      <td>nom1</td>
+      <td>prenom1</td>
+       <td>daterdv41</td>
       <td> <button type="button" class="btn btn-primary">Modifier</button>
         <button type="button" class="btn btn-secondary">Supprimer</button></td>
     </tr>
+
     <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>twitter</td>
-      <td> <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-secondary">Secondary</button></td>
+      <th scope="row">2</th>
+      <td>1002</td>
+      <td>nom2</td>
+      <td>prenom2</td>
+       <td>daterdv2</td>
+      <td> <button type="button" class="btn btn-primary">Modifier</button>
+        <button type="button" class="btn btn-secondary">Supprimer</button></td>
     </tr>
   </tbody>
-</table>y1
+</table>
