--- a/src/app/rdv/mainrdv/mainrdv.component.html
+++ b/src/app/rdv/mainrdv/mainrdv.component.html
@@ -1,1 +1,9 @@
-<p>mainrdv works!</p>
+<h3 align="center" style="color: brown">Dashboard RDV</h3>
+<button class="btn btn-primary" routerLink="" style="margin-right: 5px">
+  List of RDV
+</button>
+<button class="btn btn-success" routerLink="" style="margin-right: 5px">
+  Add new RDV
+</button>
+<hr />
+<router-outlet></router-outlet>
