mise à jour date dand addRDV

--- a/src/app/rdv/add-rdv/add-rdv.component.html
+++ b/src/app/rdv/add-rdv/add-rdv.component.html
@@ -19,8 +19,8 @@
   </div>
   <div class="form-group">
     <label for="DateRDV">DateRDV</label>
-    <input ngModel required name="DateRDV" type="text" class="form-control" id="DateRDV"  placeholder="DateRDV">
+    <input ngModel required name="DateRDV" type="date" class="form-control" id="DateRDV"  placeholder="DateRDV">
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-warning">Submit</button>
 </form>
