--- a/src/app/rdv/list-rdv/list-rdv.component.html
+++ b/src/app/rdv/list-rdv/list-rdv.component.html
@@ -19,7 +19,7 @@
        <td>daterdv41</td>
       <td> <button type="button" class="btn btn-primary">Modifier</button>
         <button type="button" class="btn btn-secondary">Détail</button>
-        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-danger">Supprimer</button>
       </td>
     </tr>
 
@@ -32,7 +32,7 @@
       <td>
         <button type="button" class="btn btn-primary">Modifier</button>
         <button type="button" class="btn btn-secondary">Détail</button>
-        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-danger">supprimer</button>
       </td>
     </tr>
   </tbody>
