--- a/src/app/rdv/list-rdv/list-rdv.component.html
+++ b/src/app/rdv/list-rdv/list-rdv.component.html
@@ -1,39 +1,27 @@
 
 <h2 align="center"> Liste des RDV du service .....</h2>
-<table class="table">
-  <thead class="thead-dark">
+
+
+<table align="center" border="1" class="table">
+  <thead>
     <tr>
-      <th scope="col">N° Patient</th>
-      <th scope="col">Nom</th>
-      <th scope="col">Prenom</th>
-      <th scope="col">Date Rdv</th>
-      <th scope="col">Actions</th>
+      <th>IPP</th>
+      <th>Nom</th>
+      <th>Prenom</th>
+      <th>Service</th>
+      <th>Date RDV</th>
+      
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>1001</td>
-      <td>nom1</td>
-      <td>prenom1</td>
-       <td>daterdv41</td>
-      <td> <button type="button" class="btn btn-primary">Modifier</button>
-        <button type="button" class="btn btn-secondary">Détail</button>
-        <button type="button" class="btn btn-danger">Supprimer</button>
-      </td>
-    </tr>
-
-    <tr>
-      <th scope="row">2</th>
-      <td>1002</td>
-      <td>nom2</td>
-      <td>prenom2</td>
-       <td>daterdv2</td>
-      <td>
-        <button type="button" class="btn btn-primary">Modifier</button>
-        <button type="button" class="btn btn-secondary">Détail</button>
-        <button type="button" class="btn btn-danger">supprimer</button>
-      </td>
+    <tr *ngFor="let rdv of rdvs">
+      <td>{{rdv.ipp}}</td>
+      <td>{{rdv.nom}}</td>
+      <td>{{rdv.prenom}}</td>
+      <td>{{rdv.service}}</td>
+      <td>{{rdv.dateRdv}}</td>
+      <!-- <td><button class="btn btn-danger" (click)="deleteProvider(provider)">Supprimer</button></td> -->
+      <!-- <td><button class="btn btn-warning" (click)="updateProvider(provider)">Modifier</button></td> -->
     </tr>
   </tbody>
 </table>
