--- a/src/app/rdv/mainrdv/mainrdv.component.html
+++ b/src/app/rdv/mainrdv/mainrdv.component.html
@@ -1,24 +1,29 @@
-<h3 align="center" style="color: brown">Dashboard RDV</h3>
-<button
-  class="btn btn-primary"
-  routerLink="/dashbaordRdv/list"
-  style="margin-right: 5px"
->
-  List of RDV
-</button>
-<button
-  class="btn btn-success"
-  routerLink="/dashbaordRdv/add"
-  style="margin-right: 5px"
->
-  Add new RDV
-</button>
-<button
-  class="btn btn-success"
-  routerLink="/dashbaordRdv/update"
-  style="margin-right: 5px"
->
-  Update a RDV
-</button>
-<hr />
-<router-outlet></router-outlet>
+<div class="container">
+  <h3 align="center" style="color: brown; margin-bottom: 30px">
+    Gestion des Rendez-vous
+  </h3>
+  <button
+    class="btn btn-primary"
+    routerLink="/dashbaordRdv/list"
+    style="margin-right: 5px"
+  >
+    Liste des Rendez-vous
+  </button>
+  <button
+    class="btn btn-success"
+    routerLink="/dashbaordRdv/add"
+    style="margin-right: 5px"
+  >
+    Nouveau Rendez-vous
+  </button>
+
+  <!-- <button
+    class="btn btn-warning"
+    routerLink="/dashbaordRdv/update"
+    style="margin-right: 5px"
+  >
+    Mise à jour Rendez-vous
+  </button> -->
+  <hr />
+  <router-outlet></router-outlet>
+</div>
